--- a/estilos.css
+++ b/estilos.css
@@ -46,6 +46,18 @@ p{
     height: 80vh;
     object-fit: cover
 }
+.card img{
+    width: 100%;
+    height: 80vh;
+    object-fit: cover
+}
+.card p{
+    width: 50%
+}
+.card p1{
+    width: 50%;
+    color: #333;    
+}
 footer{
     background-color: #839080;
     text-align: center;
